--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <!-- Open Graph -->
   <meta property="og:site_name" content="㈜세찬기술" />
   <meta property="og:title" content="회사소개 | ㈜세찬기술" />
-  <meta property="og:description" content="플랜트 배관 설계 전문기업 세찬기술의 회사 소개." />
+  <meta property="og:description" content="플랜트 배관 설계 전문기업 세찬기술의 회사 소개. 반도체·바이오·석유화학·발전 분야에서 신뢰받는 엔지니어링 파트너입니다." />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="https://www.sechantec.co.kr/about.html" />
   <meta property="og:image" content="https://www.sechantec.co.kr/img/og-image.png" />
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="/assets/site.css?v=20251002b" />
 </head>
 <body class="has-hero">
+  <!-- 상단 메뉴바: 파셜로 그대로 유지 -->
   <div id="site-header"></div>
 
   <main>
@@ -28,47 +29,33 @@
     <section class="page-hero" role="img" aria-label="세찬기술 회사소개">
       <div class="overlay">
         <h1>회사소개</h1>
-        <p>정확한 설계로 신뢰를 쌓는 엔지니어링 파트너</p>
+        <p>앞선 기술력과 풍부한 경험으로 신뢰를 설계합니다</p>
       </div>
     </section>
 
-    <!-- 본문: 2열 (좌 텍스트 / 우 이미지 + 보조 카드) -->
+    <!-- 본문 -->
     <section class="page-content">
-      <section class="about-grid">
-        <div class="about-main">
+      <!-- 좌 텍스트 / 우 이미지 (이미지 크기 유지) -->
+      <section class="section-2col section-2col--about">
+        <div class="about-content">
           <p class="about-text">
-            <span class="company-name">㈜세찬기술</span>은 플랜트 배관 설계에 특화된 엔지니어링 기업으로,
-            3D CAD 기반의 간섭·시공성 검토와 표준화된 프로세스를 통해 안정적인 품질과 효율을 제공합니다.
-            기본·상세 설계부터 시공 지원까지 프로젝트 전 단계에서 실무 중심의 설계 역량을 제공합니다.
+            <span class="company-name">㈜세찬기술</span>은 플랜트 배관 설계 분야에서 축적된 경험과 전문성을 바탕으로
+            고객의 비전을 실현하는 최적의 엔지니어링 솔루션을 제공합니다. 설계의 정밀성과 효율성을 동시에 추구하며,
+            프로젝트의 초기 기획부터 상세 설계 전 과정에 걸쳐 신뢰할 수 있는 파트너로 함께합니다.
           </p>
           <p class="about-text">
-            바이오, 석유화학, 발전, 반도체 등 다양한 산업군의 프로젝트에서 축적한 경험을 바탕으로,
-            안전과 일정, 비용의 균형을 맞추는 현실적인 해법을 제시합니다. 고객과의 긴밀한 협업을 통해
-            프로젝트 리스크를 줄이고 목표 일정을 안정적으로 달성합니다.
-          </p>
-          <p class="about-text">
-            앞으로도 기술의 깊이와 현장의 신뢰를 바탕으로, 고객 가치 창출에 기여하는 파트너가 되겠습니다.
+            세찬기술은 급변하는 산업 환경 속에서도 바이오, 석유화학, 발전, 반도체 등 다양한 분야의 복잡한 과제를 수행하며
+            기술력을 입증해 왔습니다. 고객 맞춤형 설계와 품질 보증 체계를 확립하여 리스크를 최소화하고,
+            효율적인 일정 관리로 최상의 결과를 제공하고 있습니다.
           </p>
         </div>
-
-        <aside class="about-side">
-          <div class="about-photo">
-            <img src="/img/about-plant.jpg" alt="플랜트 배관 설계 이미지" />
-          </div>
-          <!-- PC에서 빈 느낌 줄이는 보조 카드 -->
-          <div class="stat-card">
-            <h3>한눈에 보는 세찬기술</h3>
-            <ul>
-              <li><strong>전문 분야</strong> : 플랜트 배관 설계</li>
-              <li><strong>주요 산업</strong> : 바이오·석유화학·발전·반도체</li>
-              <li><strong>주요 역량</strong> : 3D 간섭/시공성 검토, 표준화 프로세스</li>
-            </ul>
-          </div>
-        </aside>
+        <div>
+          <img src="/img/about-plant.jpg" alt="플랜트 배관 설계 현장 이미지" />
+        </div>
       </section>
 
-      <!-- 핵심 가치: '정밀성·신뢰'만 노출 (자동화 제거) -->
-      <section class="values-grid tight" aria-label="핵심 가치">
+      <!-- (요청 반영) 가치 카드: 정밀성·신뢰만 노출, ‘자동화’ 제거 -->
+      <section class="values-grid values-grid--about" aria-label="핵심 가치">
         <div class="value-item">
           <i>✓</i>
           <h3>정밀성</h3>
@@ -84,7 +71,6 @@
   </main>
 
   <div id="site-footer"></div>
-  <script src="/assets/site.js?v=20251002b"></script>
+  <script src="/assets/site.js?v=20251002a"></script>
 </body>
 </html>
-
