--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <link rel="canonical" href="https://www.sechantec.co.kr/about.html" />
   <meta name="robots" content="index, follow" />
 
-  <!-- Open Graph -->
+  <!-- Open Graph (네이버/카톡 미리보기 등) -->
   <meta property="og:site_name" content="㈜세찬기술" />
   <meta property="og:title" content="회사소개 | ㈜세찬기술" />
   <meta property="og:description" content="플랜트 배관 설계 전문기업 세찬기술의 회사 소개. 반도체·바이오·석유화학·발전 분야에서 신뢰받는 엔지니어링 파트너입니다." />
@@ -17,16 +17,23 @@
   <meta property="og:url" content="https://www.sechantec.co.kr/about.html" />
   <meta property="og:image" content="https://www.sechantec.co.kr/img/og-image.png" />
 
+  <!-- Twitter 카드(선택) -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="회사소개 | ㈜세찬기술" />
+  <meta name="twitter:description" content="플랜트 배관 설계 전문기업 세찬기술의 회사 소개." />
+  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-image.png" />
+
   <link rel="icon" href="/favicon.ico" />
-  <link rel="stylesheet" href="/assets/site.css?v=20251002b" />
+  <link rel="stylesheet" href="/assets/site.css?v=20250924a" />
 </head>
+
 <body class="has-hero">
-  <!-- 상단 메뉴바: 파셜로 그대로 유지 -->
+  <!-- 공통 헤더 -->
   <div id="site-header"></div>
 
   <main>
-    <!-- 상단 히어로 -->
-    <section class="page-hero" role="img" aria-label="세찬기술 회사소개">
+    <!-- 상단 히어로 (배경 + 흰 글씨) -->
+    <section class="page-hero">
       <div class="overlay">
         <h1>회사소개</h1>
         <p>앞선 기술력과 풍부한 경험으로 신뢰를 설계합니다</p>
@@ -35,42 +42,63 @@
 
     <!-- 본문 -->
     <section class="page-content">
-      <!-- 좌 텍스트 / 우 이미지 (이미지 크기 유지) -->
-      <section class="section-2col section-2col--about">
-        <div class="about-content">
+      <!-- 좌 텍스트 / 우 이미지 -->
+      <section class="section-2col">
+        <div>
+          <!-- ✅ 기존 텍스트 보존 (줄바꿈 보조는 .br-mobile만 사용) -->
           <p class="about-text">
-            <span class="company-name">㈜세찬기술</span>은 플랜트 배관 설계 분야에서 축적된 경험과 전문성을 바탕으로
-            고객의 비전을 실현하는 최적의 엔지니어링 솔루션을 제공합니다. 설계의 정밀성과 효율성을 동시에 추구하며,
-            프로젝트의 초기 기획부터 상세 설계 전 과정에 걸쳐 신뢰할 수 있는 파트너로 함께합니다.
-          </p>
-          <p class="about-text">
-            세찬기술은 급변하는 산업 환경 속에서도 바이오, 석유화학, 발전, 반도체 등 다양한 분야의 복잡한 과제를 수행하며
-            기술력을 입증해 왔습니다. 고객 맞춤형 설계와 품질 보증 체계를 확립하여 리스크를 최소화하고,
-            효율적인 일정 관리로 최상의 결과를 제공하고 있습니다.
+            <span class="company-name">㈜세찬기술</span>은<br>
+            플랜트 배관 설계 분야에서 축적된 경험과 전문성을
+            <span class="br-mobile"><br></span>
+            바탕으로 고객의 비전을 실현하는 최적의 엔지니어링
+            <span class="br-mobile"><br></span>
+            솔루션을 제공합니다.
+            <span class="br-mobile"><br></span>
+            우리는 설계의 정밀성과 효율성을 동시에 추구하며,
+            <span class="br-mobile"><br></span>
+            프로젝트의 초기 기획부터 상세 설계 전 과정에 걸쳐
+            <span class="br-mobile"><br></span>
+            신뢰할 수 있는 파트너로 함께합니다.<br><br><br>
+
+            세찬기술은 급변하는 산업 환경 속에서도
+            <span class="br-mobile"><br></span>
+            바이오, 석유화학, 발전, 반도체 등 다양한 분야의
+            <span class="br-mobile"><br></span>
+            복잡한 과제를 수행하며 기술력을 입증해 왔습니다.
+            <span class="br-mobile"><br></span>
+            이를 통해 고객 맞춤형 설계와 품질 보증 체계를
+            <span class="br-mobile"><br></span>
+            확립하였으며, 프로젝트 리스크를 최소화하고 효율적인
+            <span class="br-mobile"><br></span>
+            일정 관리로 최상의 결과를 제공하고 있습니다.<br><br><br>
+
+            앞으로도 <strong>지속적인 혁신</strong>과 <strong>전문 인력 양성</strong>을 통해<br>
+            고객 가치 창출에 기여하고, 글로벌 시장에서도<br>
+            인정받는 <strong>엔지니어링 파트너</strong>로 성장해 나가겠습니다.
           </p>
         </div>
         <div>
-          <img src="/img/about-plant.jpg" alt="플랜트 배관 설계 현장 이미지" />
+          <img src="/img/about-plant.jpg" alt="플랜트 설계 이미지">
         </div>
       </section>
 
-      <!-- (요청 반영) 가치 카드: 정밀성·신뢰만 노출, ‘자동화’ 제거 -->
-      <section class="values-grid values-grid--about" aria-label="핵심 가치">
-        <div class="value-item">
-          <i>✓</i>
-          <h3>정밀성</h3>
-          <p>3D 기반 간섭·시공성 검토로 설계 품질을 높입니다.</p>
-        </div>
-        <div class="value-item">
-          <i>🤝</i>
-          <h3>신뢰</h3>
-          <p>프로젝트 전 단계에서 투명한 커뮤니케이션을 약속합니다.</p>
-        </div>
+      <!-- (선택) PC에서 허전함 완화용 보조 카드 -->
+      <section class="about-aside-cards">
+        <article class="stat-card">
+          <h3>한눈에 보는 세찬기술</h3>
+          <ul>
+            <li><strong>전문 분야</strong> : 플랜트 배관 설계</li>
+            <li><strong>주요 산업</strong> : 바이오·석유화학·발전·반도체</li>
+            <li><strong>핵심 강점</strong> : 3D 간섭/시공성 검토, 표준화된 프로세스</li>
+          </ul>
+        </article>
       </section>
     </section>
   </main>
 
+  <!-- 공통 푸터 -->
   <div id="site-footer"></div>
-  <script src="/assets/site.js?v=20251002a"></script>
+  <script src="/assets/site.js"></script>
 </body>
 </html>
+
