--- a/index.html
+++ b/index.html
@@ -4,106 +4,209 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>㈜세찬기술 | 플랜트 배관 설계 전문기업</title>
-  <meta name="description" content="플랜트·배관 3D 설계와 자동화 솔루션을 제공하는 ㈜세찬기술의 공식 웹사이트." />
+  <title>㈜세찬기술 | 메인</title>
+  <meta name="description" content="플랜트·배관 3D 설계 전문 회사, 세찬기술의 공식 웹사이트." />
   <link rel="canonical" href="https://www.sechantec.co.kr/" />
   <meta name="robots" content="index, follow" />
 
   <!-- Open Graph -->
   <meta property="og:site_name" content="㈜세찬기술" />
   <meta property="og:title" content="㈜세찬기술 | 플랜트 배관 설계 전문기업" />
-  <meta property="og:description" content="바이오·석유화학·발전·반도체 분야에서 검증된 3D 배관 설계와 자동화 솔루션." />
+  <meta property="og:description" content="바이오·석유화학·발전·반도체 분야에서 신뢰받는 엔지니어링 서비스를 제공합니다." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.sechantec.co.kr/" />
   <meta property="og:image" content="https://www.sechantec.co.kr/img/og-image.png" />
 
-  <link rel="icon" href="/favicon.ico" />
-  <link rel="stylesheet" href="/assets/site.css?v=20251002b" />
+  <link rel="stylesheet" href="/assets/site.css?v=20250924a" />
+  <style>
+    /* === 페이지 전용(추가 섹션) 경량 보강 === */
+    :root{ --hero-h:60vh; --hero-h-min:360px; }
+    @media (max-width:980px){ :root{ --hero-h:46vh; --hero-h-min:280px; } }
+
+    /* 슬라이드와 동일 높이 유지용 래퍼 */
+    .alt-hero-wrap{ max-width: var(--maxw); margin: 24px auto 0; padding: 0 var(--pad); }
+    .alt-hero{ 
+      display:grid; grid-template-columns: 1.1fr 0.9fr; gap:24px; 
+      height: var(--hero-h); min-height: var(--hero-h-min);
+      border-radius:16px; overflow:hidden; 
+      background:#f6f8fb;
+    }
+    .alt-hero + .alt-hero{ margin-top: 24px; }
+    .alt-hero .imgbox{ position:relative; }
+    .alt-hero .imgbox img{
+      position:absolute; inset:0; width:100%; height:100%; object-fit:cover; object-position:center;
+    }
+    .alt-hero .textbox{
+      display:flex; align-items:center; padding:24px; background:#fff;
+    }
+    .alt-hero .textbox .inner{ max-width:560px; }
+    .alt-hero h2{ margin:0 0 10px; font-size:1.8rem; }
+    .alt-hero p{ margin:0 0 14px; line-height:1.65; color:#333; }
+    .alt-hero .btn{ display:inline-block; background:#0b3a70; color:#fff; padding:10px 14px; border-radius:10px; }
+
+    /* 좌/우 교차 배치 */
+    .alt-hero.left-img .imgbox{ order:1; }
+    .alt-hero.left-img .textbox{ order:2; }
+    .alt-hero.right-img .imgbox{ order:2; }
+    .alt-hero.right-img .textbox{ order:1; }
+
+    @media (max-width:980px){
+      .alt-hero{ grid-template-columns:1fr; height:auto; min-height:0; }
+      .alt-hero .imgbox{ position:relative; height: 46vh; min-height: 240px; }
+      .alt-hero .textbox{ padding:18px; }
+      .alt-hero h2{ font-size:1.4rem; }
+    }
+  .alt-hero {
+  grid-template-columns: 1fr 1fr;   /* 50:50 깔끔 분할 */
+  align-items: stretch;             /* 두 칼럼 높이 맞춤 */
+}
+
+/* 텍스트 박스: 완전 중앙 정렬 & 넉넉한 패딩 */
+.alt-hero .textbox {
+  display: flex;
+  align-items: center;              /* 수직 중앙 */
+  justify-content: center;          /* 가로 중앙 */
+  padding: 32px;                    /* 넉넉한 여백 */
+  background: #fff;
+}
+
+.alt-hero .textbox .inner {
+  max-width: 560px;                 /* 문단 폭 과도하게 길어지지 않게 */
+  width: 100%;
+}
+
+/* 타이포 살짝 키워서 시각 밸런스 */
+.alt-hero h2 {
+  font-size: 2rem;
+  margin: 0 0 12px;
+}
+.alt-hero p {
+  font-size: 1.02rem;
+  line-height: 1.7;
+  margin: 0 0 16px;
+}
+
+/* 이미지 박스: 완전 채우되 중앙 유지 */
+.alt-hero .imgbox {
+  position: relative;
+  overflow: hidden;                 /* 코너 라운드와 맞춤 */
+}
+.alt-hero .imgbox img {
+  position: absolute;
+  inset: 0;
+  width: 100%; height: 100%;
+  object-fit: cover;
+  object-position: center;          /* 중앙 기준 */
+  transform: translateZ(0);         /* 렌더링 안정화 */
+}
+
+/* 섹션 카드 자체 라운드/그림자 살짝 강화 → 무게감 맞춤 */
+.alt-hero {
+  border-radius: 16px;
+  box-shadow: 0 10px 24px rgba(0,0,0,.06);
+}
+
+/* 좌/우 교차는 유지하되, 1:1 비율에선 순서만 바뀌게 */
+.alt-hero.left-img .imgbox { order: 1; }
+.alt-hero.left-img .textbox { order: 2; }
+.alt-hero.right-img .imgbox { order: 2; }
+.alt-hero.right-img .textbox { order: 1; }
+
+/* 모바일은 기존처럼 스택 + 타이포 살짝 줄임 */
+@media (max-width: 980px) {
+  .alt-hero {
+    grid-template-columns: 1fr;
+    height: auto; min-height: 0;
+  }
+  .alt-hero .imgbox {
+    position: relative;
+    height: var(--hero-h);          /* 기존 히어로 높이 변수 재활용 */
+    min-height: var(--hero-h-min);
+  }
+  .alt-hero .textbox {
+    padding: 18px;
+  }
+  .alt-hero h2 { font-size: 1.5rem; }
+  .alt-hero p { font-size: 1rem; line-height: 1.6; }
+}
+
+  </style>
 </head>
 <body>
-  <!-- 상단 메뉴바: 파셜로 그대로 유지 -->
   <div id="site-header"></div>
 
-  <!-- 기존 Hero 슬라이드: 그대로 유지 -->
-  <div class="slideshow-wrap" aria-label="주요 비주얼">
+  <!-- ✅ 기존 슬라이드 (그대로 유지) -->
+  <div class="slideshow-wrap">
     <div class="slideshow-inner">
-      <div class="slideshow-container" role="region" aria-roledescription="carousel" aria-label="회사 핵심 메시지">
+      <div class="slideshow-container">
         <!-- Slide 1 -->
-        <div class="slide active" aria-hidden="false">
-          <img src="/img/plant1.png" alt="플랜트 배관 설계 비주얼 1" />
+        <div class="slide active">
+          <img src="/img/plant1.png" alt="플랜트 이미지 1" />
           <div class="caption">
             <h2>정확한 설계, 신뢰의 가치</h2>
             <p>플랜트 배관 전문기업 ㈜세찬기술</p>
-            <p class="tight-text">3D 설계·표준화된 프로세스로 리스크를 줄이고 일정을 단축합니다.</p>
+            <p class="tight-text">축적된 경험과 최신 기술을 통한 최적 설계 솔루션 제공</p>
           </div>
         </div>
         <!-- Slide 2 -->
-        <div class="slide" aria-hidden="true">
-          <img src="/img/plant2.png" alt="플랜트 배관 설계 비주얼 2" />
+        <div class="slide">
+          <img src="/img/plant2.png" alt="플랜트 이미지 2" />
           <div class="caption">
             <h2>정확한 설계, 신뢰의 가치</h2>
-            <p>바이오·석유화학·발전·반도체 분야 검증</p>
-            <p class="tight-text">데이터 기반 간섭·시공성 검토로 품질과 효율을 동시에.</p>
+            <p>플랜트 배관 전문기업 ㈜세찬기술</p>
+            <p>신뢰받는 파트너, 세찬기술의 최적 설계 서비스</p>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- ▼▼▼ 신규: Hero 크기와 동일한 세로 스택 패널 3개 ▼▼▼ -->
-  <main class="feature-stack" aria-label="요약 섹션">
-    <!-- 회사소개 패널 -->
-    <a class="feature-panel" href="/about.html" aria-label="회사소개 바로가기">
-      <img src="/img/feature-about.jpg" alt="회사소개 대표 이미지" />
-      <div class="feature-overlay">
-        <h3>회사소개</h3>
-        <p>
-          세찬기술은 플랜트 배관 설계에 특화된 엔지니어링 기업입니다.
-          3D CAD 기반의 정밀 검토와 표준화된 프로세스로 안정적인 품질과 효율을 제공합니다.
-        </p>
-        <span class="feature-cta">자세히 보기</span>
+  <!-- ✅ 추가: 히어로 높이와 동일한 3개 섹션 (좌/우 교차 배치) -->
+  <section class="alt-hero-wrap" aria-label="요약 섹션">
+    <!-- 1) 회사소개: 왼쪽 사진 / 오른쪽 글 -->
+    <div class="alt-hero left-img">
+      <div class="imgbox">
+        <img src="/img/hero-about.jpg" alt="회사소개 이미지">
       </div>
-    </a>
-
-    <!-- 서비스 패널 -->
-    <a class="feature-panel" href="/services.html" aria-label="사업분야 바로가기">
-      <img src="/img/feature-services.jpg" alt="사업분야 대표 이미지" />
-      <div class="feature-overlay">
-        <h3>사업분야</h3>
-        <p>
-          배관 3D 설계, 간섭·시공성 검토, 표준/도면 체계 구축 등
-          플랜트 엔지니어링 전 과정에서 실무 중심의 서비스를 제공합니다.
-        </p>
-        <span class="feature-cta">자세히 보기</span>
+      <div class="textbox">
+        <div class="inner">
+          <h2>회사소개</h2>
+          <p>세찬기술은 플랜트 배관 설계에 특화된 엔지니어링 기업입니다. 3D CAD 기반 간섭·시공성 검토와 표준화된 프로세스를 통해 안정적인 품질과 효율을 제공합니다.</p>
+          <a class="btn" href="/about.html" aria-label="회사소개 자세히 보기">상세보기</a>
+        </div>
       </div>
-    </a>
+    </div>
 
-    <!-- 뉴스/공지 패널 -->
-    <a class="feature-panel" href="/news.html" aria-label="공지 및 소식 바로가기">
-      <img src="/img/feature-news.jpg" alt="공지 및 소식 대표 이미지" />
-      <div class="feature-overlay">
-        <h3>공지/소식</h3>
-        <p>
-          프로젝트 소식과 기술 인사이트를 전해드립니다.
-          최신 업데이트를 확인해 보세요.
-        </p>
-        <span class="feature-cta">자세히 보기</span>
+    <!-- 2) 서비스: 오른쪽 사진 / 왼쪽 글 -->
+    <div class="alt-hero right-img">
+      <div class="imgbox">
+        <img src="/img/hero-services.jpg" alt="사업분야 이미지">
       </div>
-    </a>
-  </main>
-  <!-- ▲▲▲ 여기까지 신규 스택. Hero와 동일한 높이로 세팅됨 ▲▲▲ -->
+      <div class="textbox">
+        <div class="inner">
+          <h2>서비스</h2>
+          <p>기본·상세 설계부터 간섭/시공성 검토까지 프로젝트 전 단계에서 정확성과 일정을 동시에 만족시키는 실무 중심 설계를 제공합니다.</p>
+          <a class="btn" href="/services.html" aria-label="서비스 상세 보기">상세보기</a>
+        </div>
+      </div>
+    </div>
 
-  <!-- (선택) 기존 하단 카드가 필요 없으면 삭제해도 됨 -->
-  <!-- 유지하려면 아래 섹션을 남겨두세요 -->
-  <!--
-  <section class="bottom-menu" aria-label="바로가기">
-    <div class="bm-grid">
-      ...
+    <!-- 3) 뉴스: 왼쪽 사진 / 오른쪽 글 -->
+    <div class="alt-hero left-img">
+      <div class="imgbox">
+        <img src="/img/hero-news.jpg" alt="공지 및 소식 이미지">
+      </div>
+      <div class="textbox">
+        <div class="inner">
+          <h2>공지 & 소식</h2>
+          <p>세찬기술의 최신 소식을 확인하세요. 프로젝트 업데이트와 공지사항으로 더 가까이 소통하겠습니다.</p>
+          <a class="btn" href="/news.html" aria-label="공지 및 소식 바로가기">상세보기</a>
+        </div>
+      </div>
     </div>
   </section>
-  -->
 
   <div id="site-footer"></div>
-  <script src="/assets/site.js?v=20251002a"></script>
+  <script src="/assets/site.js"></script>
 </body>
 </html>
