--- a/index.html
+++ b/index.html
@@ -17,125 +17,12 @@
   <meta property="og:url" content="https://www.sechantec.co.kr/" />
   <meta property="og:image" content="https://www.sechantec.co.kr/img/og-image.png" />
 
-  <link rel="stylesheet" href="/assets/site.css?v=20250924a" />
-  <style>
-    /* === 페이지 전용(추가 섹션) 경량 보강 === */
-    :root{ --hero-h:60vh; --hero-h-min:360px; }
-    @media (max-width:980px){ :root{ --hero-h:46vh; --hero-h-min:280px; } }
-
-    /* 슬라이드와 동일 높이 유지용 래퍼 */
-    .alt-hero-wrap{ max-width: var(--maxw); margin: 24px auto 0; padding: 0 var(--pad); }
-    .alt-hero{ 
-      display:grid; grid-template-columns: 1.1fr 0.9fr; gap:24px; 
-      height: var(--hero-h); min-height: var(--hero-h-min);
-      border-radius:16px; overflow:hidden; 
-      background:#f6f8fb;
-    }
-    .alt-hero + .alt-hero{ margin-top: 24px; }
-    .alt-hero .imgbox{ position:relative; }
-    .alt-hero .imgbox img{
-      position:absolute; inset:0; width:100%; height:100%; object-fit:cover; object-position:center;
-    }
-    .alt-hero .textbox{
-      display:flex; align-items:center; padding:24px; background:#fff;
-    }
-    .alt-hero .textbox .inner{ max-width:560px; }
-    .alt-hero h2{ margin:0 0 10px; font-size:1.8rem; }
-    .alt-hero p{ margin:0 0 14px; line-height:1.65; color:#333; }
-    .alt-hero .btn{ display:inline-block; background:#0b3a70; color:#fff; padding:10px 14px; border-radius:10px; }
-
-    /* 좌/우 교차 배치 */
-    .alt-hero.left-img .imgbox{ order:1; }
-    .alt-hero.left-img .textbox{ order:2; }
-    .alt-hero.right-img .imgbox{ order:2; }
-    .alt-hero.right-img .textbox{ order:1; }
-
-    @media (max-width:980px){
-      .alt-hero{ grid-template-columns:1fr; height:auto; min-height:0; }
-      .alt-hero .imgbox{ position:relative; height: 46vh; min-height: 240px; }
-      .alt-hero .textbox{ padding:18px; }
-      .alt-hero h2{ font-size:1.4rem; }
-    }
-  .alt-hero {
-  grid-template-columns: 1fr 1fr;   /* 50:50 깔끔 분할 */
-  align-items: stretch;             /* 두 칼럼 높이 맞춤 */
-}
-
-/* 텍스트 박스: 완전 중앙 정렬 & 넉넉한 패딩 */
-.alt-hero .textbox {
-  display: flex;
-  align-items: center;              /* 수직 중앙 */
-  justify-content: center;          /* 가로 중앙 */
-  padding: 32px;                    /* 넉넉한 여백 */
-  background: #fff;
-}
-
-.alt-hero .textbox .inner {
-  max-width: 560px;                 /* 문단 폭 과도하게 길어지지 않게 */
-  width: 100%;
-}
-
-/* 타이포 살짝 키워서 시각 밸런스 */
-.alt-hero h2 {
-  font-size: 2rem;
-  margin: 0 0 12px;
-}
-.alt-hero p {
-  font-size: 1.02rem;
-  line-height: 1.7;
-  margin: 0 0 16px;
-}
-
-/* 이미지 박스: 완전 채우되 중앙 유지 */
-.alt-hero .imgbox {
-  position: relative;
-  overflow: hidden;                 /* 코너 라운드와 맞춤 */
-}
-.alt-hero .imgbox img {
-  position: absolute;
-  inset: 0;
-  width: 100%; height: 100%;
-  object-fit: cover;
-  object-position: center;          /* 중앙 기준 */
-  transform: translateZ(0);         /* 렌더링 안정화 */
-}
-
-/* 섹션 카드 자체 라운드/그림자 살짝 강화 → 무게감 맞춤 */
-.alt-hero {
-  border-radius: 16px;
-  box-shadow: 0 10px 24px rgba(0,0,0,.06);
-}
-
-/* 좌/우 교차는 유지하되, 1:1 비율에선 순서만 바뀌게 */
-.alt-hero.left-img .imgbox { order: 1; }
-.alt-hero.left-img .textbox { order: 2; }
-.alt-hero.right-img .imgbox { order: 2; }
-.alt-hero.right-img .textbox { order: 1; }
-
-/* 모바일은 기존처럼 스택 + 타이포 살짝 줄임 */
-@media (max-width: 980px) {
-  .alt-hero {
-    grid-template-columns: 1fr;
-    height: auto; min-height: 0;
-  }
-  .alt-hero .imgbox {
-    position: relative;
-    height: var(--hero-h);          /* 기존 히어로 높이 변수 재활용 */
-    min-height: var(--hero-h-min);
-  }
-  .alt-hero .textbox {
-    padding: 18px;
-  }
-  .alt-hero h2 { font-size: 1.5rem; }
-  .alt-hero p { font-size: 1rem; line-height: 1.6; }
-}
-
-  </style>
+  <link rel="stylesheet" href="/assets/site.css?v=20251002a" />
 </head>
 <body>
   <div id="site-header"></div>
 
-  <!-- ✅ 기존 슬라이드 (그대로 유지) -->
+  <!-- ✅ 기존 슬라이드 (유지) -->
   <div class="slideshow-wrap">
     <div class="slideshow-inner">
       <div class="slideshow-container">
@@ -161,48 +48,41 @@
     </div>
   </div>
 
-  <!-- ✅ 추가: 히어로 높이와 동일한 3개 섹션 (좌/우 교차 배치) -->
-  <section class="alt-hero-wrap" aria-label="요약 섹션">
-    <!-- 1) 회사소개: 왼쪽 사진 / 오른쪽 글 -->
-    <div class="alt-hero left-img">
-      <div class="imgbox">
-        <img src="/img/hero-about.jpg" alt="회사소개 이미지">
-      </div>
-      <div class="textbox">
-        <div class="inner">
-          <h2>회사소개</h2>
-          <p>세찬기술은 플랜트 배관 설계에 특화된 엔지니어링 기업입니다. 3D CAD 기반 간섭·시공성 검토와 표준화된 프로세스를 통해 안정적인 품질과 효율을 제공합니다.</p>
-          <a class="btn" href="/about.html" aria-label="회사소개 자세히 보기">상세보기</a>
+  <!-- ✅ 하단 선택형 메인 메뉴 (아이콘 + 문구 강화) -->
+  <section class="bottom-menu" aria-label="하단 선택 메뉴">
+    <div class="bm-grid">
+      <!-- 회사소개 -->
+      <a class="bm-card" href="/about.html" aria-label="회사소개로 이동">
+        <div class="bm-thumb">
+          <img src="/img/menu-about.png" alt="회사소개" />
         </div>
-      </div>
-    </div>
+        <div class="bm-body">
+          <h3>회사소개</h3>
+          <p class="bm-desc">플랜트 배관 설계 전문기업. 3D 기반 간섭·시공성 검토와 표준화된 프로세스로 신뢰를 설계합니다.</p>
+        </div>
+      </a>
 
-    <!-- 2) 서비스: 오른쪽 사진 / 왼쪽 글 -->
-    <div class="alt-hero right-img">
-      <div class="imgbox">
-        <img src="/img/hero-services.jpg" alt="사업분야 이미지">
-      </div>
-      <div class="textbox">
-        <div class="inner">
-          <h2>서비스</h2>
-          <p>기본·상세 설계부터 간섭/시공성 검토까지 프로젝트 전 단계에서 정확성과 일정을 동시에 만족시키는 실무 중심 설계를 제공합니다.</p>
-          <a class="btn" href="/services.html" aria-label="서비스 상세 보기">상세보기</a>
+      <!-- 서비스 -->
+      <a class="bm-card" href="/services.html" aria-label="서비스로 이동">
+        <div class="bm-thumb">
+          <img src="/img/menu-services.png" alt="서비스" />
         </div>
-      </div>
-    </div>
+        <div class="bm-body">
+          <h3>서비스</h3>
+          <p class="bm-desc">기본·상세 설계부터 간섭/시공성 검토까지, 일정과 품질을 동시에 만족시키는 실무 중심 설계 서비스.</p>
+        </div>
+      </a>
 
-    <!-- 3) 뉴스: 왼쪽 사진 / 오른쪽 글 -->
-    <div class="alt-hero left-img">
-      <div class="imgbox">
-        <img src="/img/hero-news.jpg" alt="공지 및 소식 이미지">
-      </div>
-      <div class="textbox">
-        <div class="inner">
-          <h2>공지 & 소식</h2>
-          <p>세찬기술의 최신 소식을 확인하세요. 프로젝트 업데이트와 공지사항으로 더 가까이 소통하겠습니다.</p>
-          <a class="btn" href="/news.html" aria-label="공지 및 소식 바로가기">상세보기</a>
+      <!-- 뉴스 -->
+      <a class="bm-card" href="/news.html" aria-label="공지 및 소식으로 이동">
+        <div class="bm-thumb">
+          <img src="/img/menu-news.png" alt="공지 및 소식" />
         </div>
-      </div>
+        <div class="bm-body">
+          <h3>공지 & 소식</h3>
+          <p class="bm-desc">세찬기술의 최신 프로젝트와 회사 소식을 확인하세요.</p>
+        </div>
+      </a>
     </div>
   </section>
 
@@ -210,3 +90,4 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
