--- a/index.html
+++ b/index.html
@@ -49,45 +49,38 @@
   </div>
 
   <!-- ✅ 하단 선택형 메인 메뉴 (아이콘 + 문구 강화) -->
-  <section class="bottom-menu" aria-label="하단 선택 메뉴">
-    <div class="bm-grid">
-      <!-- 회사소개 -->
-      <a class="bm-card" href="/about.html" aria-label="회사소개로 이동">
-        <div class="bm-thumb">
-          <img src="/img/menu-about.png" alt="회사소개" />
-        </div>
-        <div class="bm-body">
-          <h3>회사소개</h3>
-          <p class="bm-desc">플랜트 배관 설계 전문기업. 3D 기반 간섭·시공성 검토와 표준화된 프로세스로 신뢰를 설계합니다.</p>
-        </div>
-      </a>
+<!-- 하단 선택형 메인 메뉴 -->
+<!-- 하단 선택형 메인 메뉴 -->
+<section class="bottom-menu" aria-label="하단 선택 메뉴">
+  <div class="bm-grid">
+    <a class="bm-card" href="/about.html">
+      <div class="bm-thumb">
+        <img src="/img/menu-about.png" alt="회사소개" />
+      </div>
+      <p class="bm-desc">플랜트 배관 설계 전문기업. 3D CAD 기반 설계와 표준화된 프로세스로 신뢰를 설계합니다.</p>
+    </a>
 
-      <!-- 서비스 -->
-      <a class="bm-card" href="/services.html" aria-label="서비스로 이동">
-        <div class="bm-thumb">
-          <img src="/img/menu-services.png" alt="서비스" />
-        </div>
-        <div class="bm-body">
-          <h3>서비스</h3>
-          <p class="bm-desc">기본·상세 설계부터 간섭/시공성 검토까지, 일정과 품질을 동시에 만족시키는 실무 중심 설계 서비스.</p>
-        </div>
-      </a>
+    <a class="bm-card" href="/services.html">
+      <div class="bm-thumb">
+        <img src="/img/menu-services.png" alt="서비스" />
+      </div>
+      <p class="bm-desc">기본·상세 설계부터 시공성 검토까지 프로젝트 전 단계를 아우르는 엔지니어링 서비스 제공.</p>
+    </a>
 
-      <!-- 뉴스 -->
-      <a class="bm-card" href="/news.html" aria-label="공지 및 소식으로 이동">
-        <div class="bm-thumb">
-          <img src="/img/menu-news.png" alt="공지 및 소식" />
-        </div>
-        <div class="bm-body">
-          <h3>공지 & 소식</h3>
-          <p class="bm-desc">세찬기술의 최신 프로젝트와 회사 소식을 확인하세요.</p>
-        </div>
-      </a>
-    </div>
-  </section>
+    <a class="bm-card" href="/news.html">
+      <div class="bm-thumb">
+        <img src="/img/menu-news.png" alt="공지 및 소식" />
+      </div>
+      <p class="bm-desc">세찬기술의 최신 프로젝트와 공지사항을 확인하세요.</p>
+    </a>
+  </div>
+</section>
+
+
 
   <div id="site-footer"></div>
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
