--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="bm-thumb">
         <img src="/img/menu-services.png" alt="서비스" />
       </div>
-      <p class="bm-desc">기본·상세 설계부터 시공성 검토까지 프로젝트 전 단계를 아우르는 엔지니어링 서비스 제공.</p>
+      <p class="bm-desc">기본·상세 설계 검토까지 프로젝트 전 단계를 아우르는 엔지니어링 서비스 제공.</p>
     </a>
 
     <a class="bm-card" href="/news.html">
@@ -82,5 +82,6 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
