--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     <section class="page-hero">
       <div class="overlay">
         <h1>회사소개</h1>
-        <p>앞선 기술력과 풍부한 경험으로 신뢰를 설계합니다</p>
+        <p>앞선 기술력과 풍부한 경험으로 신뢰를 설계합니다.</p>
       </div>
     </section>
 
@@ -101,4 +101,5 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
