Fix HTML encoding issues in about-location.html

--- a/about-location.html
+++ b/about-location.html
@@ -102,7 +102,7 @@
               <span class="br-mobile"><br></span>
               디지털3단지·가산비즈니스센터 하차
             </li>
-            <li>자가용: 구글, 네이버에 "세찬기술" 검색</li>
+            <li>자가용: 네비, 구글, 네이버에 "세찬기술" 검색</li>
           </ul>
         </div>
 
@@ -122,6 +122,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
