--- a/about-ideology.html
+++ b/about-ideology.html
@@ -14,13 +14,13 @@
   <meta property="og:description" content="세찬기술의 경영 이념과 핵심 가치를 소개합니다." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.sechantec.co.kr/about-ideology.html" />
-  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-ideology.png" />
+  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-image.jpg" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="이념 | ㈜세찬기술" />
   <meta name="twitter:description" content="세찬기술의 경영 이념과 핵심 가치를 소개합니다." />
-  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-ideology.png" />
+  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-image.jpg" />
 
   <link rel="stylesheet" href="/assets/site.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -77,6 +77,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
