--- a/about-history.html
+++ b/about-history.html
@@ -14,13 +14,13 @@
   <meta property="og:description" content="㈜세찬기술의 회사 연혁과 프로젝트 발자취." />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="https://www.sechantec.co.kr/about-history.html" />
-  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-history.png" />
+  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-image.jpg" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="연혁 | ㈜세찬기술" />
   <meta name="twitter:description" content="㈜세찬기술의 회사 연혁과 프로젝트 발자취." />
-  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-history.png" />
+  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-image.jpg" />
 
   <link rel="stylesheet" href="/assets/site.css" />
 
@@ -263,6 +263,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
