--- a/about-location.html
+++ b/about-location.html
@@ -14,13 +14,13 @@
   <meta property="og:description" content="㈜세찬기술 본사 주소 및 교통편 안내." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.sechantec.co.kr/about-location.html" />
-  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-location.png" />
+  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-image.jpg" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="오시는 길 | ㈜세찬기술" />
   <meta name="twitter:description" content="㈜세찬기술 본사 주소 및 교통편 안내." />
-  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-location.png" />
+  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-image.jpg" />
 
   <link rel="stylesheet" href="/assets/site.css" />
 
@@ -122,6 +122,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
