--- a/about-partners.html
+++ b/about-partners.html
@@ -14,13 +14,13 @@
   <meta property="og:description" content="세찬기술과 협력하는 주요 파트너사를 소개합니다." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.sechantec.co.kr/about-partners.html" />
-  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-partners.png" />
+  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-image.jpg" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="파트너 | ㈜세찬기술" />
   <meta name="twitter:description" content="세찬기술과 협력하는 주요 파트너사를 소개합니다." />
-  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-partners.png" />
+  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-image.jpg" />
 
   <link rel="stylesheet" href="/assets/site.css" />
 
@@ -124,6 +124,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
