--- a/about-vision.html
+++ b/about-vision.html
@@ -14,13 +14,13 @@
   <meta property="og:description" content="세찬기술의 비전과 미래 성장 전략." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.sechantec.co.kr/about-vision.html" />
-  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-vision.png" />
+  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-image.jpg" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Vision | ㈜세찬기술" />
   <meta name="twitter:description" content="세찬기술의 비전과 미래 성장 전략." />
-  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-vision.png" />
+  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-image.jpg" />
 
   <link rel="stylesheet" href="/assets/site.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -159,6 +159,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
