--- a/about.html
+++ b/about.html
@@ -15,13 +15,13 @@
   <meta property="og:description" content="플랜트 배관 설계 전문기업 세찬기술의 회사 소개. 반도체·바이오·석유화학·발전 분야에서 신뢰받는 엔지니어링 파트너입니다." />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="https://www.sechantec.co.kr/about.html" />
-  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-image.png" />
+  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-image.jpg" />
 
   <!-- Twitter 카드(선택) -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="회사소개 | ㈜세찬기술" />
   <meta name="twitter:description" content="플랜트 배관 설계 전문기업 세찬기술의 회사 소개." />
-  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-image.png" />
+  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-image.jpg" />
 
   <link rel="icon" href="/favicon.ico" />
   <link rel="stylesheet" href="/assets/site.css?v=20250924a" />
@@ -101,5 +101,6 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
