--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:description" content="바이오·석유화학·발전·반도체 분야에서 신뢰받는 엔지니어링 서비스를 제공합니다." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.sechantec.co.kr/" />
-  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-image.png" />
+  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-image.jpg" />
 
   <link rel="stylesheet" href="/assets/site.css?v=20251002a" />
 </head>
@@ -82,6 +82,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
