Fix HTML structure and update Open Graph images

--- a/news.html
+++ b/news.html
@@ -14,13 +14,13 @@
   <meta property="og:description" content="세찬기술의 최신 공지 및 뉴스 소식을 확인하세요." />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="https://www.sechantec.co.kr/news.html" />
-  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-news.png" />
+  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-image.jpg" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="공지 | ㈜세찬기술" />
   <meta name="twitter:description" content="세찬기술의 최신 공지 및 뉴스 소식을 확인하세요." />
-  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-news.png" />
+  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-image.jpg" />
 
   <link rel="stylesheet" href="/assets/site.css" />
 
@@ -116,6 +116,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
