--- a/product.html
+++ b/product.html
@@ -14,13 +14,13 @@
   <meta property="og:description" content="세찬기술의 제품과 성과를 소개하는 갤러리." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.sechantec.co.kr/product.html" />
-  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-product.png" />
+  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-image.jpg" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Product | ㈜세찬기술" />
   <meta name="twitter:description" content="세찬기술의 제품과 성과를 소개하는 갤러리." />
-  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-product.png" />
+  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-image.jpg" />
 
   <link rel="stylesheet" href="/assets/site.css" />
   <style>
@@ -152,6 +152,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
