Fix HTML encoding issues in services.html

--- a/services.html
+++ b/services.html
@@ -14,13 +14,13 @@
   <meta property="og:description" content="세찬기술의 주요 업무영역과 엔지니어링 서비스를 소개합니다." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.sechantec.co.kr/services.html" />
-  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-service.png" />
+  <meta property="og:image" content="https://www.sechantec.co.kr/img/og-image.jpg" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="서비스 | ㈜세찬기술" />
   <meta name="twitter:description" content="세찬기술의 주요 업무영역과 엔지니어링 서비스를 소개합니다." />
-  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-service.png" />
+  <meta name="twitter:image" content="https://www.sechantec.co.kr/img/og-image.jpg" />
 
   <link rel="stylesheet" href="/assets/site.css" />
 
@@ -116,6 +116,7 @@
   <script src="/assets/site.js"></script>
 </body>
 </html>
+
 
 
 
